<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/delete_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:textColor="#61399D"
        android:text="@string/delete" />
    
    <Button
        android:id="@+id/segunda_listagem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="160dp"
        android:textColor="#61399D"
        android:text="@string/listagem" />

    <TextView
        android:id="@+id/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/delete_input"
        android:textColor="#61399D"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/delete_text" />

    <EditText
        android:id="@+id/delete_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/delete_note_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:ems="10" 
        android:inputType="text"/>

</RelativeLayout>